feat(quiz) Added quiz & results page

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,11 @@
     <title>Quiz Challenge</title>    
 </head>
 <body>
-
-    <div id="restaurants"></div>
+    
+    <div class="container-fluid">
+        <div id="quiz"></div>
+        <div id="zomato"></div>
+    </div>
 
 </body>
 </html>
